# neverbore

./: .gitignore  CMakeLists.txt  CREDITS  README.md  clickable.json  manifest.json.in  neverbore.apparmor
app/: Box.qml  CMakeLists.txt  CreditsPage.qml  FrontPage.qml  GameBoard.qml  GameGrid.qml  GamePage.qml  HintsHeader.qml  HowToPage.qml  LevelListItem.qml  LevelsPage.qml  MenuListItem.qml  PacksPage.qml  neverbore.desktop.in  neverbore.qml
backend/: CMakeLists.txt
backend/modules/Neverbore/: backend.cpp  level.cpp  level.h  levels.cpp  levels.h  pack.cpp  pack.h  qmldir
cmake/: Click.cmake
levels/: 0.Training.non  100.Easy Scatter Puzzles #1.nonpack  101.Easy Scatter Puzzles #2.nonpack  200.Moderate Scatter Puzzles #1.nonpack  201.Moderate Scatter Puzzles #2.nonpack  300.Hard Scatter Puzzles #1.nonpack  301.Hard Scatter Puzzles #2.nonpack  400.Devious Scatter Puzzles #1.nonpack
po/: de.po  el.po  es.po  fr.po  it.po  ku.po  neverbore.mterry.pot  pl.po  pt.po  ru.po
